--- a/upload.html
+++ b/upload.html
@@ -112,59 +112,70 @@
 </div>
 
 <script>
-    function handleCSVUpload() {
-        const fileInput = document.getElementById('csvFile');
-        const file = fileInput.files[0];
-        const reader = new FileReader();
+    
+function handleCSVUpload() {
+    const fileInput = document.getElementById('csvFile');
+    const file = fileInput.files[0];
+    const reader = new FileReader();
 
-        reader.onload = function(event) {
-            const csvData = event.target.result;
-            const lines = csvData.split(/\r\n|\n/);
+    reader.onload = function(event) {
+        const csvData = event.target.result;
+        const lines = csvData.split(/\r\n|\n/);
 
-            lines.forEach(line => {
-                const [uen, amount, editable, expiry, refNumber, company] = line.split(',');
-                generateQRCode(uen, parseFloat(amount), editable === 'true', expiry, refNumber, company);
-            });
-        };
+        lines.forEach(line => {
+            const [amount, refNumber] = line.split(',');
 
-        reader.readAsText(file);
-    }
+            // Set static values
+            const uen = "201412014EB2B";
+            const editable = "No";
 
-    function generateQRCode(uen, amount, editable, expiry, refNumber, company) {
-        const qrCode = new PaynowQR({
-            uen: uen,
-            amount: amount,
-            editable: editable,
-            expiry: expiry,
-            refNumber: refNumber,
-            company: company
+            // Calculate expiry date
+            const today = new Date();
+            const expiry = new Date(today.getFullYear(), today.getMonth() + 1, today.getDate());
+
+            generateQRCode(uen, parseFloat(amount), editable === 'true', expiry, refNumber, '');
         });
+    };
 
-        const QRstring = qrCode.output();
+    reader.readAsText(file);
+}
 
-        const styledQRCode = new QRCodeStyling({
-            width: 300,
-            height: 300,
-            data: QRstring,
-            image: 'https://i.imgur.com/ipaIiBl.png',
-            imageOptions: {
-                crossOrigin: 'anonymous',
-                margin: 0,
-            },
-        });
+function generateQRCode(uen, amount, editable, expiry, refNumber, company) {
+    const qrCode = new PaynowQR({
+        uen: uen,
+        amount: amount,
+        editable: editable,
+        expiry: expiry.toISOString().split('T')[0], // Format as YYYY-MM-DD
+        refNumber: refNumber,
+        company: company
+    });
 
-        const qrcodeContainer = document.getElementById('qrcode-container');
+    const QRstring = qrCode.output();
 
-        const qrCodeDiv = document.createElement('div');
-        qrCodeDiv.classList.add('qr-code');
-        qrcodeContainer.appendChild(qrCodeDiv);
+    const styledQRCode = new QRCodeStyling({
+        width: 300,
+        height: 300,
+        data: QRstring,
+        image: 'https://i.imgur.com/ipaIiBl.png',
+        imageOptions: {
+            crossOrigin: 'anonymous',
+            margin: 0,
+        },
+    });
 
-        styledQRCode.append(qrCodeDiv);
+    const qrcodeContainer = document.getElementById('qrcode-container');
 
-        const refNumberText = document.createElement('p');
-        refNumberText.textContent = `Reference Number: ${refNumber}`;
-        qrCodeDiv.appendChild(refNumberText);
-    }
+    const qrCodeDiv = document.createElement('div');
+    qrCodeDiv.classList.add('qr-code');
+    qrcodeContainer.appendChild(qrCodeDiv);
+
+    styledQRCode.append(qrCodeDiv);
+
+    const refNumberText = document.createElement('p');
+    refNumberText.textContent = `Reference Number: ${refNumber}`;
+    qrCodeDiv.appendChild(refNumberText);
+}
+
 
     function downloadAllQRCode() {
         const qrcodeContainer = document.getElementById('qrcode-container');
