--- a/upload.html
+++ b/upload.html
@@ -201,7 +201,7 @@ function generateQRCode(uen, amount, editable, expiry, refNumber, company) {
     }
 
     function downloadCSVTemplate() {
-        const csvTemplate = 'UEN,Amount,Editable,Expiry,RefNumber,Company\n';
+        const csvTemplate = 'Amount,RefNumber\n';
         const blob = new Blob([csvTemplate], { type: 'text/csv' });
         const link = document.createElement('a');
         link.href = URL.createObjectURL(blob);
@@ -210,6 +210,7 @@ function generateQRCode(uen, amount, editable, expiry, refNumber, company) {
         link.click();
         document.body.removeChild(link);
     }
+
 
     function updateFileName(input) {
         const fileNameElement = document.getElementById('fileName');
