--- a/upload.html
+++ b/upload.html
@@ -124,7 +124,9 @@ function handleCSVUpload() {
 
         // Skip the first line (header row)
         for (let i = 1; i < lines.length; i++) {
-            const line = lines[i];
+            const line = lines[i].trim(); // Trim to remove leading/trailing whitespace
+            if (line === '') continue; // Skip empty lines
+
             const [amount, refNumber] = line.split(',');
 
             // Set static values
@@ -141,6 +143,7 @@ function handleCSVUpload() {
 
     reader.readAsText(file);
 }
+
 
 
 function generateQRCode(uen, amount, editable, expiry, refNumber, company) {
