--- a/upload.html
+++ b/upload.html
@@ -34,12 +34,13 @@
             border: none;
             border-radius: 5px;
             transition: background-color 0.3s ease;
+            background-color: #3498db; /* Blue background color */
+            color: #fff; /* White text color */
         }
 
         .container button:hover,
         .container .custom-file-upload:hover {
-            background-color: #e74c3c;
-            color: #fff;
+            background-color: #2980b9; /* Dark blue background color on hover */
         }
 
         .container input[type='file'] {
