--- a/upload.html
+++ b/upload.html
@@ -34,14 +34,17 @@
             border: none;
             border-radius: 5px;
             transition: background-color 0.3s ease;
-            background-color: #3498db; /* Blue background color */
-            color: #fff; /* White text color */
+            width: 200px; /* Adjust the width as needed */
+            display: inline-block; /* Make both buttons the same length */
+            text-align: center; /* Center text */
         }
-
+        
         .container button:hover,
         .container .custom-file-upload:hover {
-            background-color: #2980b9; /* Dark blue background color on hover */
+            background-color: #e74c3c;
+            color: #fff;
         }
+
 
         .container input[type='file'] {
             display: none;
