--- a/upload.html
+++ b/upload.html
@@ -34,16 +34,18 @@
             border: none;
             border-radius: 5px;
             transition: background-color 0.3s ease;
-            width: 200px; /* Adjust the width as needed */
+            width: calc(50% - 20px); /* Adjust the width to take 50% of the container minus margins */
             display: inline-block; /* Make both buttons the same length */
             text-align: center; /* Center text */
+            background-color: #007bff; /* Set the same background color for both buttons */
+            color: #fff; /* Set the text color */
         }
         
         .container button:hover,
         .container .custom-file-upload:hover {
-            background-color: #e74c3c;
-            color: #fff;
+            background-color: #0056b3; /* Darken the background color on hover */
         }
+
 
 
         .container input[type='file'] {
