--- a/upload.html
+++ b/upload.html
@@ -34,17 +34,19 @@
             border: none;
             border-radius: 5px;
             transition: background-color 0.3s ease;
-            width: calc(50% - 20px); /* Adjust the width to take 50% of the container minus margins */
+            width: 200px; /* Adjust the width as needed */
             display: inline-block; /* Make both buttons the same length */
             text-align: center; /* Center text */
-            background-color: #007bff; /* Set the same background color for both buttons */
-            color: #fff; /* Set the text color */
+            background-color: #f0f0f0; /* Set background color */
+            color: #333; /* Set text color */
         }
         
         .container button:hover,
         .container .custom-file-upload:hover {
-            background-color: #0056b3; /* Darken the background color on hover */
+            background-color: #e74c3c; /* Change background color on hover to red */
+            color: #fff; /* Change text color to white */
         }
+
 
 
 
