--- a/upload.html
+++ b/upload.html
@@ -25,8 +25,7 @@
         }
 
         .container button,
-        .container input[type='file'],
-        .container .custom-file-upload {
+        .container input[type='file'] {
             margin: 10px;
             padding: 12px 24px;
             font-size: 16px;
@@ -35,20 +34,16 @@
             border-radius: 5px;
             transition: background-color 0.3s ease;
             width: 500px; /* Adjust the width as needed */
-            display: inline-block; /* Make both buttons the same length */
+            display: inline-block; /* Ensure it respects width */
             text-align: center; /* Center text */
             background-color: #f0f0f0; /* Set background color */
             color: #333; /* Set text color */
         }
         
-        .container button:hover,
-        .container .custom-file-upload:hover {
+        .container button:hover {
             background-color: #e74c3c; /* Change background color on hover to red */
             color: #fff; /* Change text color to white */
         }
-
-
-
 
         .container input[type='file'] {
             display: none;
