--- a/upload.html
+++ b/upload.html
@@ -25,7 +25,8 @@
         }
 
         .container button,
-        .container input[type='file'] {
+        .container input[type='file'],
+        .container .custom-file-upload {
             margin: 10px;
             padding: 12px 24px;
             font-size: 16px;
@@ -34,16 +35,20 @@
             border-radius: 5px;
             transition: background-color 0.3s ease;
             width: 500px; /* Adjust the width as needed */
-            display: inline-block; /* Ensure it respects width */
+            display: inline-block; /* Make both buttons the same length */
             text-align: center; /* Center text */
             background-color: #f0f0f0; /* Set background color */
             color: #333; /* Set text color */
         }
         
-        .container button:hover {
+        .container button:hover,
+        .container .custom-file-upload:hover {
             background-color: #e74c3c; /* Change background color on hover to red */
             color: #fff; /* Change text color to white */
         }
+
+
+
 
         .container input[type='file'] {
             display: none;
