--- a/upload.html
+++ b/upload.html
@@ -128,6 +128,7 @@
 
             // Show the download QR codes button after CSV upload is completed
             document.getElementById('downloadButton').style.display = 'block';
+            document.getElementById('downloadButton').style.margin = 'auto';
         };
 
         reader.readAsText(file);
