--- a/upload.html
+++ b/upload.html
@@ -25,6 +25,8 @@
         }
 
         .container button,
+        .container #downloadCSVButton,
+        .container #downloadButton,
         .container input[type='file'],
         .container .custom-file-upload {
             margin: 10px;
