--- a/upload.html
+++ b/upload.html
@@ -1,3 +1,4 @@
+User
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,8 +26,6 @@
         }
 
         .container button,
-        .container #downloadCSVButton,
-        .container #downloadButton,
         .container input[type='file'],
         .container .custom-file-upload {
             margin: 10px;
