--- a/upload.html
+++ b/upload.html
@@ -175,7 +175,7 @@
         qrCodeDiv.appendChild(refNumberText);
 
         const amountText = document.createElement('p');
-        amountText.textContent = `Amount: ${amount}`;
+        amountText.textContent = `Amount (SGD): ${amount}`;
         qrCodeDiv.appendChild(amountText);
     }
 
