--- a/upload.html
+++ b/upload.html
@@ -176,7 +176,7 @@
         qrCodeDiv.appendChild(refNumberText);
 
         const amountText = document.createElement('p');
-        amountText.textContent = `Amount (SGD): ${amount}`;
+        amountText.textContent = `Amount (SGD): $${amount}`;
         qrCodeDiv.appendChild(amountText);
     }
 
