--- a/upload.html
+++ b/upload.html
@@ -115,7 +115,7 @@
             // Skip the first line (header row)
             for (let i = 1; i < lines.length; i++) {
                 const line = lines[i].trim(); // Trim to remove leading/trailing whitespace
-                if (line === '' || /^\s*$/.test(line)) continue; // Skip empty or whitespace-only lines
+                if (!line || !line.trim()) continue; // Skip if line is empty or consists of only whitespace
     
                 const [amountStr, refNumber] = line.split(',');
                 const amount = parseFloat(amountStr.replace(/[^0-9.]/g, '')); // Remove non-numeric characters
@@ -138,6 +138,8 @@
     
         reader.readAsText(file);
     }
+
+
 
 
 
