--- a/index.html
+++ b/index.html
@@ -119,28 +119,8 @@
     <div id="content-container" class="container">
         <div id="form-container">
             <form id="payNowForm">
-                <label for="uen">UEN (UEN of company):</label>
-                <input type="text" id="uen" name="uen" required>
-                <br>
-
                 <label for="amount">Amount to Pay:</label>
-                <input type="number" id="amount" name="amount" required>
-                <br>
-
-                <label for="editable">Allow Editing of Amount:</label>
-                <input type="checkbox" id="editable" name="editable">
-                <br>
-
-                <label for="expiry">Expiry Date (YYYYMMDD):</label>
-                <input type="text" id="expiry" name="expiry">
-                <br>
-
-                <label for="refNumber">Reference Number:</label>
-                <input type="text" id="refNumber" name="refNumber">
-                <br>
-
-                <label for="company">Company Name:</label>
-                <input type="text" id="company" name="company">
+                <input type="number" id="amount" name="amount" value="0" required>
                 <br>
 
                 <button type="button" onclick="generateQRCode()">Generate QR Code</button>
@@ -154,29 +134,30 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/qr-code-styling"></script>
-    <script src="./dist/paynowqr.umd.js"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
     <script>
         function generateQRCode() {
-        // Show the QR code container after generating the QR code
-        document.getElementById('qrcode-container').style.display = 'block'; 
-        // Show the download button after QR code generation
-        document.getElementById('downloadButton').style.display = 'block';
-            
-            const uen = document.getElementById('uen').value;
+            // Show the QR code container after generating the QR code
+            document.getElementById('qrcode-container').style.display = 'block'; 
+            // Show the download button after QR code generation
+            document.getElementById('downloadButton').style.display = 'block';
+
             const amount = parseFloat(document.getElementById('amount').value);
-            const editable = document.getElementById('editable').checked;
-            const expiry = document.getElementById('expiry').value;
-            const refNumber = document.getElementById('refNumber').value;
-            const company = document.getElementById('company').value;
-        
+            const today = new Date();
+            // Set expiry date as 1 month from today
+            const expiryDate = new Date(today.getFullYear(), today.getMonth() + 1, today.getDate());
+            // Format expiry date as YYYYMMDD
+            const expiry = expiryDate.getFullYear() * 10000 + (expiryDate.getMonth() + 1) * 100 + expiryDate.getDate();
+            // Fixed UEN and Allow Editing
+            const uen = '201412014EB2B';
+            const editable = false;
+            // No company name provided
+
             const qrCode = new PaynowQR({
                 uen: uen,
                 amount: amount,
                 editable: editable,
-                expiry: expiry,
-                refNumber: refNumber,
-                company: company
+                expiry: expiry
             });
 
             const QRstring = qrCode.output();
@@ -195,10 +176,6 @@
             const qrcodeContainer = document.getElementById('qrcode-container');
             qrcodeContainer.innerHTML = '';
             styledQRCode.append(qrcodeContainer);
-
-            const refNumberText = document.createElement('p');
-            refNumberText.textContent = `Reference Number: ${refNumber}`;
-            qrcodeContainer.appendChild(refNumberText);
 
             // Show the download button after QR code generation
             document.getElementById('downloadButton').style.display = 'block';
