--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-User
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -120,29 +119,20 @@ User
     <div id="content-container" class="container">
         <div id="form-container">
             <form id="payNowForm">
-                <label for="uen">UEN (UEN of company):</label>
-                <input type="text" id="uen" name="uen" required>
-                <br>
-
+                <!-- Remove input fields for UEN, Expiry date, Company Name -->
+                <!-- Disallow editing of amount -->
                 <label for="amount">Amount to Pay:</label>
                 <input type="number" id="amount" name="amount" required>
                 <br>
 
-                <label for="editable">Allow Editing of Amount:</label>
-                <input type="checkbox" id="editable" name="editable">
-                <br>
+                <!-- Fixed "editable" value to "No" -->
+                <input type="hidden" id="editable" name="editable" value="false">
 
-                <label for="expiry">Expiry Date (YYYYMMDD):</label>
-                <input type="text" id="expiry" name="expiry">
-                <br>
+                <!-- Removed Expiry Date input field -->
 
-                <label for="refNumber">Reference Number:</label>
-                <input type="text" id="refNumber" name="refNumber">
-                <br>
+                <!-- Removed Reference Number input field -->
 
-                <label for="company">Company Name:</label>
-                <input type="text" id="company" name="company">
-                <br>
+                <!-- Removed Company Name input field -->
 
                 <button type="button" onclick="generateQRCode()">Generate QR Code</button>
             </form>
@@ -158,71 +148,71 @@ User
     <script src="./dist/paynowqr.umd.js"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
     <script>
-    function generateQRCode() {
-        // Show the QR code container after generating the QR code
-        document.getElementById('qrcode-container').style.display = 'block';
-        // Show the download button after QR code generation
-        document.getElementById('downloadButton').style.display = 'block';
+        function generateQRCode() {
+            // Show the QR code container after generating the QR code
+            document.getElementById('qrcode-container').style.display = 'block';
+            // Show the download button after QR code generation
+            document.getElementById('downloadButton').style.display = 'block';
 
-        const uen = "201412014EB2B"; // Fixed UEN
-        const amount = parseFloat(document.getElementById('amount').value);
-        const editable = document.getElementById('editable').checked;
-        const today = new Date(); // Get today's date
-        today.setMonth(today.getMonth() + 1); // Add one month to today's date
-        const expiry = today.getFullYear() + ('0' + (today.getMonth() + 1)).slice(-2) + ('0' + today.getDate()).slice(-2); // Format expiry date as YYYYMMDD
-        const refNumber = document.getElementById('refNumber').value;
-        const company = document.getElementById('company').value;
+            const uen = "201412014EB2B"; // Fixed UEN
+            const amount = parseFloat(document.getElementById('amount').value);
+            const editable = document.getElementById('editable').checked;
+            const today = new Date(); // Get today's date
+            today.setMonth(today.getMonth() + 1); // Add one month to today's date
+            const expiry = today.getFullYear() + ('0' + (today.getMonth() + 1)).slice(-2) + ('0' + today.getDate()).slice(-2); // Format expiry date as YYYYMMDD
+            const refNumber = ""; // No reference number
+            const company = ""; // No company name
 
-        const qrCode = new PaynowQR({
-            uen: uen,
-            amount: amount,
-            editable: editable,
-            expiry: expiry,
-            refNumber: refNumber,
-            company: company
-        });
-
-        const QRstring = qrCode.output();
-
-        const styledQRCode = new QRCodeStyling({
-            width: 300,
-            height: 300,
-            data: QRstring,
-            image: 'https://i.imgur.com/ipaIiBl.png',
-            imageOptions: {
-                crossOrigin: 'anonymous',
-                margin: 0,
-            },
-        });
-
-        const qrcodeContainer = document.getElementById('qrcode-container');
-        qrcodeContainer.innerHTML = '';
-        styledQRCode.append(qrcodeContainer);
-
-        const refNumberText = document.createElement('p');
-        refNumberText.textContent = `Reference Number: ${refNumber}`;
-        qrcodeContainer.appendChild(refNumberText);
-    }
-
-    function downloadQRCode() {
-        const qrcodeContainer = document.getElementById('qrcode-container');
-        const canvas = document.createElement('canvas');
-        canvas.width = qrcodeContainer.clientWidth;
-        canvas.height = qrcodeContainer.clientHeight;
-        const ctx = canvas.getContext('2d');
-
-        html2canvas(qrcodeContainer).then((canvas) => {
-            canvas.toBlob((blob) => {
-                const link = document.createElement('a');
-                link.href = URL.createObjectURL(blob);
-                link.download = 'qrcode.png';
-                document.body.appendChild(link);
-                link.click();
-                document.body.removeChild(link);
+            const qrCode = new PaynowQR({
+                uen: uen,
+                amount: amount,
+                editable: editable,
+                expiry: expiry,
+                refNumber: refNumber,
+                company: company
             });
-        });
-    }
-</script>
+
+            const QRstring = qrCode.output();
+
+            const styledQRCode = new QRCodeStyling({
+                width: 300,
+                height: 300,
+                data: QRstring,
+                image: 'https://i.imgur.com/ipaIiBl.png',
+                imageOptions: {
+                    crossOrigin: 'anonymous',
+                    margin: 0,
+                },
+            });
+
+            const qrcodeContainer = document.getElementById('qrcode-container');
+            qrcodeContainer.innerHTML = '';
+            styledQRCode.append(qrcodeContainer);
+
+            const refNumberText = document.createElement('p');
+            refNumberText.textContent = `Reference Number: ${refNumber}`;
+            qrcodeContainer.appendChild(refNumberText);
+        }
+
+        function downloadQRCode() {
+            const qrcodeContainer = document.getElementById('qrcode-container');
+            const canvas = document.createElement('canvas');
+            canvas.width = qrcodeContainer.clientWidth;
+            canvas.height = qrcodeContainer.clientHeight;
+            const ctx = canvas.getContext('2d');
+
+            html2canvas(qrcodeContainer).then((canvas) => {
+                canvas.toBlob((blob) => {
+                    const link = document.createElement('a');
+                    link.href = URL.createObjectURL(blob);
+                    link.download = 'qrcode.png';
+                    document.body.appendChild(link);
+                    link.click();
+                    document.body.removeChild(link);
+                });
+            });
+        }
+    </script>
 
 </body>
 </html>
