--- a/whatsapp.html
+++ b/whatsapp.html
@@ -142,71 +142,61 @@
             reader.readAsText(file);
         }
 
-        function generateQRCode(uen, amount, editable, refNumber, company) {
-            const qrCodeContainer = document.getElementById('qrcode-container');
-            const qrCodeDiv = document.createElement('div');
-            qrCodeDiv.classList.add('qr-code');
-            qrCodeContainer.appendChild(qrCodeDiv);
+function generateQRCode(uen, amount, editable, refNumber, company) {
+    const qrCode = new PaynowQR({
+        uen: uen,
+        amount: amount,
+        editable: editable,
+        refNumber: refNumber,
+        company: company
+    });
 
-            const qrCode = new PaynowQR({
-                uen: uen,
-                amount: amount,
-                editable: editable,
-                refNumber: refNumber,
-                company: company
-            });
+    const QRstring = qrCode.output();
 
-            const QRstring = qrCode.output();
+    const styledQRCode = new QRCodeStyling({
+        width: 300,
+        height: 300,
+        data: QRstring,
+        image: 'https://i.imgur.com/ipaIiBl.png',
+        imageOptions: {
+            crossOrigin: 'anonymous',
+            margin: 0,
+        },
+    });
 
-            const styledQRCode = new QRCodeStyling({
-                width: 300,
-                height: 300,
-                data: QRstring,
-                image: 'https://i.imgur.com/ipaIiBl.png',
-                imageOptions: {
-                    crossOrigin: 'anonymous',
-                    margin: 0,
-                },
-            });
+    const qrcodeContainer = document.getElementById('qrcode-container');
 
-            styledQRCode.append(qrCodeDiv);
+    const qrCodeDiv = document.createElement('div');
+    qrCodeDiv.classList.add('qr-code');
+    qrcodeContainer.appendChild(qrCodeDiv);
 
-            const refNumberText = document.createElement('p');
-            refNumberText.textContent = `Reference Number: ${refNumber}`;
-            qrCodeDiv.appendChild(refNumberText);
+    styledQRCode.append(qrCodeDiv);
 
-            const amountText = document.createElement('p');
-            amountText.textContent = `Amount (SGD): $${amount}`;
-            qrCodeDiv.appendChild(amountText);
+    const refNumberText = document.createElement('p');
+    refNumberText.textContent = `Reference Number: ${refNumber}`;
+    qrCodeDiv.appendChild(refNumberText);
 
-            const whatsappButton = document.createElement('button');
-            whatsappButton.textContent = 'Open WhatsApp';
-            whatsappButton.classList.add('whatsapp-button');
-            whatsappButton.addEventListener('click', function() {
-                openWhatsAppWithQR(qrCodeDiv);
-            });
-            qrCodeDiv.appendChild(whatsappButton);
-        }
+    const amountText = document.createElement('p');
+    amountText.textContent = `Amount (SGD): $${amount}`;
+    qrCodeDiv.appendChild(amountText);
 
-        function openWhatsAppWithQR(qrCodeDiv) {
-            const canvas = document.createElement('canvas');
-            canvas.width = qrCodeDiv.clientWidth;
-            canvas.height = qrCodeDiv.clientHeight;
-            const ctx = canvas.getContext('2d');
+    // Create a button to send QR code via WhatsApp
+    const whatsappButton = document.createElement('button');
+    whatsappButton.textContent = 'Send via WhatsApp';
+    whatsappButton.onclick = function() {
+        sendViaWhatsApp(QRstring);
+    };
+    qrCodeDiv.appendChild(whatsappButton);
+}
 
-            html2canvas(qrCodeDiv).then((canvas) => {
-                canvas.toBlob((blob) => {
-                    const reader = new FileReader();
-                    reader.readAsDataURL(blob);
-                    reader.onloadend = function() {
-                        const base64data = reader.result;
-                        const message = `Check out this QR code for payment: ${base64data}`;
-                        const whatsappUrl = `https://wa.me/?text=${encodeURIComponent(message)}`;
-                        window.open(whatsappUrl, '_blank');
-                    };
-                });
-            });
-        }
+function sendViaWhatsApp(qrData) {
+    // Replace the following number with your desired WhatsApp number
+    const phoneNumber = '+60122188693';
+    const message = encodeURIComponent(`Sending you the QR Code: ${qrData}`);
+
+    // Open WhatsApp with the QR code image attached
+    window.open(`https://wa.me/${phoneNumber}?text=${message}`);
+}
 
         function downloadAllQRCode() {
             const qrcodeContainer = document.getElementById('qrcode-container');
