--- a/whatsapp.html
+++ b/whatsapp.html
@@ -179,7 +179,7 @@
         
         function sendViaWhatsApp(qrData) {
             // Replace the following number with your desired WhatsApp number
-            const phoneNumber = 'YOUR_PHONE_NUMBER';
+            const phoneNumber = '+60122188693';
             const message = encodeURIComponent(`Sending you the QR Code: ${qrData}`);
         
             // Open WhatsApp with the QR code image attached
