--- a/whatsapp.html
+++ b/whatsapp.html
@@ -256,7 +256,9 @@
             // Replace the following number with your desired WhatsApp number
             const phoneNumber = '+60122188693';
             const message = encodeURIComponent(`Sending you the QR Code`);
-            const base64Image = qrImage.toDataURL(); // Convert canvas to base64 image data
+            
+            // Convert canvas to base64 image data
+            const base64Image = qrImage.toDataURL("image/png").replace("data:image/png;base64,", "");
             
             // Open WhatsApp with the QR code image attached
             window.open(`https://wa.me/${phoneNumber}?text=${message}&attachment=${base64Image}`);
