--- a/whatsapp.html
+++ b/whatsapp.html
@@ -139,7 +139,7 @@
         }
 
 
-        function generateQRCode(uen, amount, editable, refNumber, company) {
+        function generateQRCode(uen, amount, editable, refNumber, company, trackingID, phoneNumber) { {
             const qrCode = new PaynowQR({
                 uen: uen,
                 amount: amount,
