--- a/whatsapp.html
+++ b/whatsapp.html
@@ -144,8 +144,7 @@
                 uen: uen,
                 amount: amount,
                 editable: editable,
-                refNumber: refNumber,
-                company: company
+                refNumber: refNumber
             });
 
             const QRstring = qrCode.output();
