--- a/email.html
+++ b/email.html
@@ -249,7 +249,7 @@
         
                         console.log('Sending email with params:', templateParams);
         
-                        emailjs.send('YOUR_SERVICE_ID', 'YOUR_TEMPLATE_ID', templateParams)
+                        emailjs.send('service_8hh8e8t', 'template_7sw3qhj', templateParams)
                             .then(function(response) {
                                 console.log('EmailJS response:', response);
                                 alert('Email sent successfully!');
