--- a/email.html
+++ b/email.html
@@ -287,6 +287,7 @@
         <div id="qrcode-container"></div>
 
         <button id="downloadButton" type="button" onclick="downloadAllQRCode()">Download All QR Codes</button>
+        <button id="downloadButton2" type="button" onclick="downloadAllQRCode()">Download All QR Codes</button>
     </div>
 </body>
 </html>
